# apps/api/src/database.types.ts
@@ -1331,7 +1331,11 @@ export type Database = {
       employee_status: 'active' | 'terminated';
       organization_role: 'owner' | 'specialist';
       responsible_person_role:
-        'workplace_manager' | 'first_aid' | 'risk_evaluation_team' | 'imminent_danger';
+        | 'workplace_manager'
+        | 'first_aid'
+        | 'risk_evaluation_team'
+        | 'imminent_danger'
+        | 'workers_representative';
       staff_category: 'technical_administrative' | 'execution';
     };
     CompositeTypes: {
@@ -1464,6 +1468,7 @@ export const Constants = {
         'first_aid',
         'risk_evaluation_team',
         'imminent_danger',
+        'workers_representative',
       ],
       staff_category: ['technical_administrative', 'execution'],
     },
